--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "express-validator": ">= 0.6.0",
     "passport-local-mongoose": ">= 0.2.4",
     "connect-flash": ">= 0.1.1",
-    "sendgrid": ">= 0.3.0"
+    "sendgrid": ">= 0.3.x"
   },
   "engines": {
     "node": "0.10.x",
